--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=latin-ext" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/73ea700413.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Quiztest</title>
 </head>
 <body>
         <nav>
             <ul>
-                <li><a href="#">sprawdź quizy<span></span></a></li>
+                <li><a>sprawdź quizy<span></span></a></li>
             </ul>
         </nav>
     <header style="mix-blend-mode: difference;">
@@ -28,7 +29,7 @@
                 Chciałbyś sprawdzić swoją sportową wiedzę? Mamy dla Ciebie wyselekcjonowane 10 pytań, które doskonale Cię sprawdzą!        
             </p>
 
-            <button class="sportStart">Start</button>
+            <button class="sportStart">Zobacz</button>
         </div>
     </div>
     </section>
@@ -41,7 +42,7 @@
                     A może lubisz muzykę? Interesujesz się faktami? Sprawdź jak rozległa jest Twoja muzyczna wiedza!        
                 </p>
     
-                <button class="musicStart">Start</button>
+                <button class="musicStart">Zobacz</button>
             </div>
 
             <div class="sign">
@@ -66,7 +67,7 @@
                     Lubisz ciekawostki historyczne? Interesuje Cię co działo się kiedyś? Zobacz ile faktów z historii pamiętasz!      
                 </p>
     
-                <button class="historyStart">Start</button>
+                <button class="historyStart">Zobacz</button>
             </div>
         </div>
 
